syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink/v2/core/services/synchronization/telem";

package telem;

message HeadReportRequest  {
  string chain_id = 1;
  Block current = 2;
  Block last_finalized = 3;
}

message Block {
  uint64 timestamp = 1;
  uint64 block_number = 2;
  string block_hash = 3;
}
